--- a/index.html
+++ b/index.html
@@ -11,111 +11,76 @@
         <link href="css/components.min.css" rel="stylesheet" id="style_components" type="text/css" />
         <link href="css/plugins.min.css" rel="stylesheet" type="text/css" />        
         <link href="css/layout.min.css" rel="stylesheet" type="text/css" />                
-        <link rel="shortcut icon" href="favicon.ico" /> </head>
+        <link rel="shortcut icon" href="favicon.ico" /> 
+        <style>
+            body {
+                padding:0px;  
+                overflow:hidden;
+            }
+
+            #chat-container {
+                margin:5px;                 
+            }
+
+            #chat-form {
+                height:54px;                
+            }
+        </style>
+    </head>
     <body>                 
-        <div class="container-fluid" style="margin-top:5px">                                                                                                                                                                                   
-            <div class="row">                           
-                <div class="col-lg-12 col-xs-12 col-sm-12">                    
-                    <div class="portlet light bordered">
-                        <div class="portlet-title">
-                            <div class="caption">                                
-                                <span class="bold uppercase">Chats</span>
-                            </div>                                       
-                        </div>
-                        <div class="portlet-body" id="chats">
-                            <div class="scroller" style="height: 525px;" data-always-visible="1" data-rail-visible1="1">
-                                <ul class="chats">                                                
-                                    <li class="in">
-                                        <img class="avatar" alt="" src="img/avatar3.jpg" />
-                                        <div class="message">
-                                            <span class="arrow"> </span>
-                                            <a href="javascript:;" class="name"> Richard Doe </a>
-                                            <span class="datetime"> at 20:35 </span>
-                                            <span class="body"> Lorem ipsum dolor sit amet, consectetuer adipiscing elit, sed diam nonummy nibh euismod tincidunt ut laoreet dolore magna aliquam erat volutpat. </span>
-                                        </div>
-                                    </li>
-                                    <li class="out">
-                                        <img class="avatar" alt="" src="img/avatar1.jpg" />
-                                        <div class="message">
-                                            <span class="arrow"> </span>
-                                            <a href="javascript:;" class="name"> Bob Nilson </a>
-                                            <span class="datetime"> at 20:40 </span>
-                                            <span class="body"> Lorem ipsum dolor sit amet, consectetuer adipiscing elit, sed diam nonummy nibh euismod tincidunt ut laoreet dolore magna aliquam erat volutpat. </span>
-                                        </div>
-                                    </li>
-                                    <li class="in">
-                                        <img class="avatar" alt="" src="img/avatar3.jpg" />
-                                        <div class="message">
-                                            <span class="arrow"> </span>
-                                            <a href="javascript:;" class="name"> Richard Doe </a>
-                                            <span class="datetime"> at 20:40 </span>
-                                            <span class="body"> Lorem ipsum dolor sit amet, consectetuer adipiscing elit, sed diam nonummy nibh euismod tincidunt ut laoreet dolore magna aliquam erat volutpat. </span>
-                                        </div>
-                                    </li>
-                                    <li class="out">
-                                        <img class="avatar" alt="" src="img/avatar1.jpg" />
-                                        <div class="message">
-                                            <span class="arrow"> </span>
-                                            <a href="javascript:;" class="name"> Bob Nilson </a>
-                                            <span class="datetime"> at 20:54 </span>
-                                            <span class="body"> Lorem ipsum dolor sit amet, consectetuer adipiscing elit, sed diam nonummy nibh euismod tincidunt ut laoreet dolore magna aliquam erat volutpat. sed diam nonummy nibh euismod tincidunt ut laoreet.
-                                            </span>
-                                        </div>
-                                    </li>
-                                    <li class="in">
-                                        <img class="avatar" alt="" src="img/avatar3.jpg" />
-                                        <div class="message">
-                                            <span class="arrow"> </span>
-                                            <a href="javascript:;" class="name"> Richard Doe </a>
-                                            <span class="datetime"> at 20:35 </span>
-                                            <span class="body"> Lorem ipsum dolor sit amet, consectetuer adipiscing elit, sed diam nonummy nibh euismod tincidunt ut laoreet dolore magna aliquam erat volutpat. </span>
-                                        </div>
-                                    </li>
-                                    <li class="out">
-                                        <img class="avatar" alt="" src="img/avatar1.jpg" />
-                                        <div class="message">
-                                            <span class="arrow"> </span>
-                                            <a href="javascript:;" class="name"> Bob Nilson </a>
-                                            <span class="datetime"> at 20:40 </span>
-                                            <span class="body"> Lorem ipsum dolor sit amet, consectetuer adipiscing elit, sed diam nonummy nibh euismod tincidunt ut laoreet dolore magna aliquam erat volutpat. </span>
-                                        </div>
-                                    </li>
-                                    <li class="in">
-                                        <img class="avatar" alt="" src="img/avatar3.jpg" />
-                                        <div class="message">
-                                            <span class="arrow"> </span>
-                                            <a href="javascript:;" class="name"> Richard Doe </a>
-                                            <span class="datetime"> at 20:40 </span>
-                                            <span class="body"> Lorem ipsum dolor sit amet, consectetuer adipiscing elit, sed diam nonummy nibh euismod tincidunt ut laoreet dolore magna aliquam erat volutpat. </span>
-                                        </div>
-                                    </li>
-                                    <li class="out">
-                                        <img class="avatar" alt="" src="img/avatar1.jpg" />
-                                        <div class="message">
-                                            <span class="arrow"> </span>
-                                            <a href="javascript:;" class="name"> Bob Nilson </a>
-                                            <span class="datetime"> at 20:54 </span>
-                                            <span class="body"> Lorem ipsum dolor sit amet, consectetuer adipiscing elit, sed diam nonummy nibh euismod tincidunt ut laoreet dolore magna aliquam erat volutpat. sed diam nonummy nibh euismod tincidunt ut laoreet.
-                                            </span>
-                                        </div>
-                                    </li>
-                                </ul>
+        <div id="chat-container" class="portlet light bordered">
+            <div id="chat-heading" class="portlet-title">
+                <div class="caption">                                
+                    <span class="bold uppercase">Chats</span>
+                </div>                                       
+            </div>
+            <div class="portlet-body" id="chats">
+                <div id="main-chats" class="scroller" data-always-visible="1" data-rail-visible1="1">
+                    <ul class="chats">                                                
+                        <li class="in">
+                            <img class="avatar" alt="" src="img/avatar3.jpg" />
+                            <div class="message">
+                                <span class="arrow"> </span>
+                                <a href="javascript:;" class="name"> Richard Doe </a>
+                                <span class="datetime"> at 20:35 </span>
+                                <span class="body"> Lorem ipsum dolor sit amet, consectetuer adipiscing elit, sed diam nonummy nibh euismod tincidunt ut laoreet dolore magna aliquam erat volutpat. </span>
                             </div>
-                            <div class="chat-form">
-                                <div class="input-cont">
-                                    <input class="form-control" type="text" placeholder="Type a message here..." /> </div>
-                                <div class="btn-cont">
-                                    <span class="arrow"> </span>
-                                    <a href="" class="btn blue icn-only">
-                                        <i class="fa fa-check icon-white"></i>
-                                    </a>
-                                </div>
+                        </li>
+                        <li class="out">
+                            <img class="avatar" alt="" src="img/avatar1.jpg" />
+                            <div class="message">
+                                <span class="arrow"> </span>
+                                <a href="javascript:;" class="name"> Bob Nilson </a>
+                                <span class="datetime"> at 20:40 </span>
+                                <span class="body"> Lorem ipsum dolor sit amet, consectetuer adipiscing elit, sed diam nonummy nibh euismod tincidunt ut laoreet dolore magna aliquam erat volutpat. </span>
                             </div>
-                        </div>
-                    </div>                    
+                        </li>
+                        <li class="in">
+                            <img class="avatar" alt="" src="img/avatar3.jpg" />
+                            <div class="message">
+                                <span class="arrow"> </span>
+                                <a href="javascript:;" class="name"> Richard Doe </a>
+                                <span class="datetime"> at 20:40 </span>
+                                <span class="body"> Lorem ipsum dolor sit amet, consectetuer adipiscing elit, sed diam nonummy nibh euismod tincidunt ut laoreet dolore magna aliquam erat volutpat. </span>
+                            </div>
+                        </li>                        
+                    </ul>
                 </div>
-            </div>                       
-        </div>                        
+                <div id="chat-form" class="chat-form">
+                    <div class="input-cont">
+                        <input id="send-message" class="form-control" type="text" placeholder="Type a message here..." />                         
+                    </div>
+                    <div class="btn-cont">
+                        <span class="arrow"> </span>
+                        <a href="" class="btn blue icn-only">
+                            <i class="fa fa-check icon-white"></i>
+                        </a>
+                    </div>
+                </div>
+                <small>190/1000</small>
+            </div>
+        </div>                    
+
         <script src="js/jquery.min.js" type="text/javascript"></script>
         <script src="js/bootstrap.min.js" type="text/javascript"></script>            
         <script src="js/jquery.slimscroll.min.js" type="text/javascript"></script>            
@@ -153,7 +118,20 @@
                     }}
             }();
             App.isAngularJsApp() === !1 && jQuery(document).ready(function() {
-                Dashboard.init()
+                Dashboard.init();
+
+                function adjustChatSize() {
+                    var browserH = $(window).height();
+                    $("#chat-container").css("height", browserH - 17 + "px");
+                    $("#chats div.slimScrollDiv").css("height", parseInt(browserH - 162) + "px");
+                    $("#main-chats").css("height", parseInt(browserH - 162) + "px");
+                }
+
+                adjustChatSize();
+
+                $(window).on("resize", function() {
+                    adjustChatSize();
+                });                                              
             });
         </script>        
         <script src="js/layout.min.js" type="text/javascript"></script>                  
