--- a/index.html
+++ b/index.html
@@ -11,23 +11,9 @@
         <link href="css/components.min.css" rel="stylesheet" id="style_components" type="text/css" />
         <link href="css/plugins.min.css" rel="stylesheet" type="text/css" />        
         <link href="css/layout.min.css" rel="stylesheet" type="text/css" />                
-        <link rel="shortcut icon" href="favicon.ico" /> 
-        <style>
-            body {
-                padding:0px;  
-                overflow:hidden;
-            }
-
-            #chat-container {
-                margin:5px;                 
-            }
-
-            #chat-form {
-                height:54px;                
-            }
-        </style>
+        <!--<link rel="shortcut icon" href="favicon.ico" /> -->  
     </head>
-    <body>                 
+    <body>               
         <div id="chat-container" class="portlet light bordered">
             <div id="chat-heading" class="portlet-title">
                 <div class="caption">                                
@@ -76,64 +62,15 @@
                             <i class="fa fa-check icon-white"></i>
                         </a>
                     </div>
-                </div>
-                <small>190/1000</small>
+                </div>                
             </div>
         </div>                    
-
         <script src="js/jquery.min.js" type="text/javascript"></script>
         <script src="js/bootstrap.min.js" type="text/javascript"></script>            
         <script src="js/jquery.slimscroll.min.js" type="text/javascript"></script>            
         <script src="js/bootstrap-switch.min.js" type="text/javascript"></script>           
         <script src="js/app.min.js" type="text/javascript"></script>                        
-        <script type="text/javascript">
-            var Dashboard = function() {
-                return{initChat: function() {
-                        var e = $("#chats"), t = $(".chats", e), a = $(".chat-form", e), i = $("input", a), l = $(".btn", a), o = function(a) {
-                            a.preventDefault();
-                            var l = i.val();
-                            if (0 != l.length) {
-                                var o = new Date, n = o.getHours() + ":" + o.getMinutes(), r = "";
-                                r += '<li class="out">', r += '<img class="avatar" alt="" src="img/avatar1.jpg"/>', r += '<div class="message">', r += '<span class="arrow"></span>', r += '<a href="#" class="name">Bob Nilson</a>&nbsp;', r += '<span class="datetime">at ' + n + "</span>", r += '<span class="body">', r += l, r += "</span>", r += "</div>", r += "</li>";
-                                t.append(r);
-                                i.val("");
-                                var s = function() {
-                                    var t = 0;
-                                    return e.find("li.out, li.in").each(function() {
-                                        t += $(this).outerHeight()
-                                    }), t
-                                };
-                                e.find(".scroller").slimScroll({scrollTo: s()})
-                            }
-                        };
-                        $("body").on("click", ".message .name", function(e) {
-                            e.preventDefault();
-                            var t = $(this).text();
-                            i.val("@" + t + ":"), App.scrollTo(i)
-                        }), l.click(o), i.keypress(function(e) {
-                            return 13 == e.which ? (o(e), !1) : void 0
-                        })
-                    }, init: function() {
-                        this.initChat()
-                    }}
-            }();
-            App.isAngularJsApp() === !1 && jQuery(document).ready(function() {
-                Dashboard.init();
-
-                function adjustChatSize() {
-                    var browserH = $(window).height();
-                    $("#chat-container").css("height", browserH - 17 + "px");
-                    $("#chats div.slimScrollDiv").css("height", parseInt(browserH - 162) + "px");
-                    $("#main-chats").css("height", parseInt(browserH - 162) + "px");
-                }
-
-                adjustChatSize();
-
-                $(window).on("resize", function() {
-                    adjustChatSize();
-                });                                              
-            });
-        </script>        
+        <script src="js/dashboard.min.js" type="text/javascript"></script>        
         <script src="js/layout.min.js" type="text/javascript"></script>                  
     </body>
 </html>
